src/test/ui/repr/repr-packed-contains-align.stderr
error[E0588]: packed type cannot transitively contain a `[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:19:1
   |
LL | struct SC(SA);
   | ^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:22:1
   |
LL | struct SD(SB);
   | ^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:25:1
   |
LL | struct SE(UA);
   | ^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:28:1
   |
LL | struct SF(UB);
   | ^^^^^^^^^^^^^^

error[E0588]: packed type cannot transitively contain a `[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:31:1
   |
LL | / union UC {
LL | |     a: UA
LL | | }
   | |_^

error[E0588]: packed type cannot transitively contain a `[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:36:1
   |
LL | / union UD {
LL | |     n: UB
LL | | }
   | |_^

error[E0588]: packed type cannot transitively contain a `[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:41:1
   |
LL | / union UE {
LL | |     a: SA
LL | | }
   | |_^

error[E0588]: packed type cannot transitively contain a `[repr(align)]` type
  --> $DIR/repr-packed-contains-align.rs:46:1
   |
LL | / union UF {
LL | |     n: SB
LL | | }
   | |_^

error: aborting due to 8 previous errors

